--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,26 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-num = "0.2.1"
-itertools = "0.9.0"
-rand = "0.7.3"
+num = "=0.2.1"
+num-traits = "=0.2.11"
+itertools = "=0.9.0"
+num-derive = "=0.3.0"
+#either = "=1.5.3"
+
+[dev-dependencies]
+rand = "=0.7.3"
+
+[package.metadata.cargo-equip.module-dependencies]
+"crate::fewnick_tree" = []
+"crate::grid" = []
+"crate::iterator" = []
+"crate::kitamsasa" = []
+"crate::math" = []
+"crate::misc" = []
+"crate::modint" = []
+"crate::rle" = []
+"crate::segtree" = []
+"crate::seive" = ["crate::rle"]
+"crate::string" = []
+"crate::tree" = []
+"crate::unionfind" = []
