--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ num-derive = "=0.3.0"
 
 [dev-dependencies]
 rand = "=0.7.3"
+criterion = "=0.3.3"
 
 [package.metadata.cargo-equip.module-dependencies]
 "crate::fewnick_tree" = []
@@ -30,3 +31,7 @@ rand = "=0.7.3"
 "crate::string" = []
 "crate::tree" = []
 "crate::unionfind" = []
+
+[[bench]]
+name = "segtree"
+harness = false
