feat: LazySegTree use Monoid trait Close #5
and Close #14

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ rand = "=0.7.3"
 criterion = "=0.3.3"
 
 [package.metadata.cargo-equip.module-dependencies]
+"crate::algebra" = []
 "crate::fewnick_tree" = []
 "crate::grid" = []
 "crate::iterator" = []
@@ -26,7 +27,7 @@ criterion = "=0.3.3"
 "crate::misc" = []
 "crate::modint" = ["crate::math"]
 "crate::rle" = []
-"crate::segtree" = []
+"crate::segtree" = ["crate::algebra"]
 "crate::seive" = ["crate::rle"]
 "crate::string" = []
 "crate::tree" = []
