--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: install-rust
+      run: rustup toolchain install 1.42.0-x86_64-unknown-linux-gnu
     - name: Build
       run: cargo build --verbose
     - name: Run tests
