--- a/klsegtree/Cargo.toml
+++ b/klsegtree/Cargo.toml
@@ -13,7 +13,7 @@ num-traits = "=0.2.11"
 itertools = "=0.9.0"
 
 [dev-dependencies]
-rand = "=0.7.3"
+rand = { version = "=0.7.3", features = ["small_rng"] }
 criterion = "=0.3.3"
 
 [[bench]]
