--- a/tests/equip_test/Cargo.toml
+++ b/tests/equip_test/Cargo.toml
@@ -24,4 +24,4 @@ klstring = { path = "../../klstring/" }
 klunionfind = { path = "../../klunionfind/" }
 num = "=0.2.1"
 itertools = "=0.9.0"
-num-derive = "=0.3.0"
+rand = { version = "=0.7.3", features = ["small_rng"] }
