--- a/tests/equip_test/Cargo.toml
+++ b/tests/equip_test/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 klalgebra = { path = "../../klalgebra/" }
 klfewnick_tree = { path = "../../klfewnick_tree/" }
 klgrid = { path = "../../klgrid/" }
+klinputmarker = { path="../../klinputmarker" }
 kliterator = { path = "../../kliterator/" }
 klkitamasa = { path = "../../klkitamasa/" }
 klmacro = { path = "../../klmacro" }
@@ -22,6 +23,8 @@ klsieve = { path = "../../klsieve/" }
 klstdfeature = { path = "../../klstdfeature/" }
 klstring = { path = "../../klstring/" }
 klunionfind = { path = "../../klunionfind/" }
+
+proconio = { version = "=0.3.6", features = ["derive"] }
 num = "=0.2.1"
 itertools = "=0.9.0"
 rand = { version = "=0.7.3", features = ["small_rng"] }
