--- a/tests/equip_test/Cargo.toml
+++ b/tests/equip_test/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 klalgebra = { path = "../../klalgebra/" }
 klfewnick_tree = { path = "../../klfewnick_tree/" }
 klgrid = { path = "../../klgrid/" }
+klinftype = { path="../../klinftype" }
 klinputmarker = { path="../../klinputmarker" }
 kliterator = { path = "../../kliterator/" }
 klkitamasa = { path = "../../klkitamasa/" }
