--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = [
     "klalgebra",
     "klfewnick_tree",
     "klgrid",
+    "klhld",
     "klinftype",
     "klinputmarker",
     "kliterator",
