--- a/klinputmarker/Cargo.toml
+++ b/klinputmarker/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-proconio = { version = "0.3.6", features = ["derive"] }
-num = "=0.2.1"
-num-rational = "=0.2.4"
+proconio = { version = "=0.4.5", features = ["derive"] }
+num = "=0.4.1"
+num-rational = "=0.4.1"
 
